--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,15 @@
 argparse
 easydict
-h5py
-matplotlib
-numpy
-open3d
-Ninja
-timm==1.0.9
-opencv-python==4.6.0.66
-pyyaml
-scipy==1.7.3
-tensorboardX==2.5.1
-tqdm==4.64.1
-transforms3d
-termcolor==2.1.1
+h5py>=3.10.0
+matplotlib>=3.8.0
+numpy>=1.26.0
+open3d>=0.17.0
+ninja
+timm>=0.9.0
+opencv-python>=4.8.0
+pyyaml>=6.0.1
+scipy>=1.12.0
+tensorboardX>=2.6.0
+tqdm>=4.66.0
+transforms3d>=0.4.1
+termcolor>=2.3.0
